# pvpi_manager

./: .gitignore  LICENSE  README.md  config.json  pvpi_config.py  pvpi_manager.py  pvpi_manager.service  pvpi_run.sh  pvpi_test.py  pvpi_test.sh  pyproject.toml  requirements.txt  set_mcu_time.py  set_muc_time.py  set_pvpi_time.sh  setup.sh  system_manager.py  uart_server.service  uart_server.sh  uart_zmq_service.py  utils.py
pvpi_client/: __init__.py  pvpi_manager.py  pvpi_node.py
src/pvpi/: __init__.py  cli.py  client.py  config.py  csv_logger.py  logging_.py  systemd.py  transports.py  utils.py
src/pvpi/pvpi/: client.py  transports.py
src/pvpi/services/: dashboard.py  system_manager.py  uart_zmq_service.py  zmq_serial_proxy.py
src/pvpi/systemd/: install.py  pvpi_manager.service  pvpi_uart.service
